creat user and creat game added

--- a/example.env
+++ b/example.env
@@ -1,3 +1,11 @@
-NODE_ENV=development
-PORT=8000
-EXAMPLE="example-environmental-variable"
+NODE_ENV=development 
+PORT=8000 
+EXAMPLE="example-environmental-variable" 
+MIGRATION_DB_HOST=127.0.0.1 
+MIGRATION_DB_PORT=5432 
+MIGRATION_DB_NAME=digi-doodle-test 
+MIGRATION_DB_USER=postgres 
+MIGRATION_DB_PASS= 
+JWT_SECRET="digi-doodle-jwt-secret" 
+DATABASE_URL="postgresql://postgres@localhost/digi-doodle-test" 
+TEST_DATABASE_URL="postgresql://postgres@localhost/digi-doodle-test"
