--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "knex": "^0.20.9",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
