--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "uuid": "^3.4.0",
     "knex": "^0.20.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.18.1",
+    "pg-native": "^3.0.0",
+    "postgrator-cli": "^3.2.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
