--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "http": "0.0.0",
     "knex": "^0.20.9",
     "morgan": "^1.9.1",
     "pg": "^7.18.1",
     "postgrator-cli": "^3.2.0",
+    "socket.io": "^2.3.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
