--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "pg": "^7.18.1",
     "postgrator-cli": "^3.2.0",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.1",
+    "should": "^13.2.3",
     "supertest": "^4.0.2"
   }
 }
